--- a/packages/react-native/src/generators/application/files/app/src/app/App.spec.tsx.template
+++ b/packages/react-native/src/generators/application/files/app/src/app/App.spec.tsx.template
@@ -2,9 +2,7 @@ import 'react-native';
 import React from 'react';
 import { render } from '@testing-library/react-native';
 
-// Avoid conflict with app.json
-// @ts-ignore
-import App from './App.tsx';
+import App from './App';
 
 it('renders correctly', () => {
   const { getByTestId } = render(<App />);
